...
                )
            },
            leadingIcon = if (showIcon) {
                {
                    Icon(
                        imageVector = Icons.Default.LocationOn,
                        contentDescription = "Loyola Campus",
                        tint = if (selectedCampus == Campus.LOYOLA)
                            MaterialTheme.colorScheme.onSecondary
                        else
                            MaterialTheme.colorScheme.onSecondaryContainer,
                        modifier = Modifier.size(20.dp)
                    )
...
                )
            },
            leadingIcon = if (showIcon) {
                {
                    Icon(
                        imageVector = Icons.Default.LocationOn,
                        contentDescription = "SGW Campus",
                        tint = if (selectedCampus == Campus.SGW)
                            MaterialTheme.colorScheme.onSecondary
                        else
                            MaterialTheme.colorScheme.onSecondaryContainer,
                        modifier = Modifier.size(20.dp)
                    )
...
